# climgRL

./: .directory  .gitignore  CMakeLists.txt  README  climgRL.kdev4  estimatormodels.db  signature.sgn
.ftestim/: DictionaryEntry.cpp  DictionaryEntry.h  Dictionnary.cpp  Dictionnary.h  ctest.cpp
.kdev4/: climgRL.kdev4
.src/: MetaImage.cpp  main.cpp
.src/Estimateurs/: Eccentricity.h  Solidity.cpp  Solidity.h  basicScoreMaker.h
.src/Modifieurs/: ConvexHull.cpp  Traitement_AntiBruit.cpp  Traitement_AntiBruit.h
.src/Tests/: .directory
.src/Tests/AntiBruit/: .directory  Test_AntiBruit.h  device6-2.pgm  device9-6.pgm  test-debruite.pgm  testbis.pgm  turtle-1-bruit-0.3-debruite.pgm  turtle-1-bruit-0.3.pgm  turtle-1-bruit-0.5-debruite.pgm  turtle-1-bruit-0.8-debruite.10.pgm  turtle-1-bruit-0.8-debruite.2.pgm  turtle-1-bruit-0.8-debruite.3.pgm  turtle-1-bruit-0.8-debruite.4.pgm  turtle-1-bruit-0.8-debruite.5.pgm  turtle-1-bruit-0.8-debruite.8.pgm  turtle-1-bruit-0.8-debruite.9.pgm  turtle-1-bruit-0.8-debruite.pgm
.src/Tests/AntiInversion/: Test_AntiInversion.cpp  Test_AntiInversion.h  rat-8-inverse.pgm
.src/Tests/ConvexHull/: .directory  Test_ConvexHull.cpp  Test_ConvexHull.h  beetle-7-convexHull.pgm  bottle-8-convexHull.pgm
.src/Tests/Eccentricity/: .directory  Eccentricity.txt  HCircle-rotate.pgm  Test_Eccentricity.h
.src/Tests/Morphology/: Test_Morphology.h  butterfly-10-closing.pgm  cup-12-closing.pgm  cup-7-closing.pgm  toto3.pgm
.src/Tests/Noise/: .directory  Solidity_Noise_Resistance.txt  Test_Eccentricity_Noise.cpp  Test_Solidity_Noise.cpp  chopper-4.3.pgm  device0-7.3.pgm  device0-7.5.pgm  fly-6.3.pgm  key-6.3.pgm  sea_snake-20.8.pgm
.src/Tests/Remplissage/: .directory  cup-12-rempli.pgm  pocket-20-rempli.pgm
.src/Tests/Rotate/: .directory  deer-6-rotate-0.pgm  deer-6-rotate-1.04.pgm
.src/Tests/Scaling/: Test_Eccentricity_Scale.cpp  bat-2-scale-0.5.pgm  bat-2-scale-2.pgm  device9-9-scale-0.5.pgm  device9-9-scale-2.pgm  hammer-20-scale-2.pgm  horse-20-scale-0.5-rempli-convexhull.pgm  horse-20-scale-2-rempli-convexhull.pgm  horse-20-scale-5-rempli-convexhull.pgm
.src/Tests/Skelton/: Resultats.txt  Test_Skelton.cpp  Test_Skelton.h  cup-7-rempli.pgm  cup.pgm  device4-1.pgm  device4-2.sk.pgm  device9.pgm  spring.pgm  turtle-1.pgm  turtle-1.sk.pgm  turtle-2.pgm  turtle-2.sk.pgm
.src/Tools/: DSS_Bresenham.cpp  Tangente.cpp  Tangente.h
ClimgRL/: .directory
ClimgRL/coordinateur/: computer.cpp  computer.h  estimator.h  main.cpp
ClimgRL/estimateurs/estimbasic/: basicScoreMaker.cpp  ctest.cpp
ClimgRL/estimateurs/estimeccentricity/: MetaImage.cpp
ClimgRL/estimateurs/estimskelton/: MetaImage.cpp  basicScoreMaker.cpp  ctest.cpp
ClimgRL/estimateurs/estimsolidity/: MetaImage.cpp  MetaImage.h  (+1 more)
ClimgRL/ressources/: estimatormodels.db
Rapport/: Rapport.tex
Rapport/Graphes/: .directory  .~lock.models.csv#  Affichage_graph.py  Affichage_graph_basicestim.py  Affichage_graph_basicestim1.py  Affichage_graph_basicestim2.py  Affichage_graph_eccentricity.py  Affichage_graph_eccentricity_bis.py  Affichage_graph_solidestim.py  Affichage_graph_spinestim.py  models-basicestim.txt  models-basicestim1.txt  models-basicestim2.txt  models-eccentricity.txt  models-eccentricitybis.txt  models-solidestim.ods  models-solidestim.txt  models-spinestim.txt  models.csv
Rapport/Illustrations/: .directory
basicestim/: basicScoreMaker.cpp  basicScoreMaker.h  ctest.cpp  ctest.h  image.cpp  image.h
centralmotor/: computer.cpp  computer.h  estimator.cpp  estimator.h  main.cpp
database/: .directory
estimeccentricity/: MetaImage.h  ctest.cpp  ctest.h
estimeccentricity/Estimateurs/: Eccentricity.cpp  basicScoreMaker.cpp
estimeccentricity/Modifieurs/: Remplissage.cpp
estimskelton/: MetaImage.cpp  basicScoreMaker.cpp  ctest.cpp  ctest.h
estimsolidity/: MetaImage.cpp  MetaImage.h  ctest.cpp
estimsolidity/Estimateurs/: Solidity.cpp  Solidity.h  basicScoreMaker.cpp  basicScoreMaker.h
estimsolidity/Modifieurs/: ConvexHull.cpp  Remplissage.h  Traitement_AntiBruit.cpp  Traitement_AntiInversion.h
ftestim/: DictionaryEntry.cpp  DictionaryEntry.h  Dictionnary.cpp  Dictionnary.h  basicScoreMaker.cpp  basicScoreMaker.h  complexe.cpp  complexe.h  ctest.cpp  ctest.h  emd.cpp  emd.h  fourrier.cpp  fourrier.h  image.cpp  image.h  main.cpp
old/: LireImgPgm.h
src/: MetaImage.cpp  MetaImage.h  main.cpp
src/Estimateurs/: AverageBendingFlexion.cpp  AverageBendingFlexion.h  Eccentricity.cpp  Eccentricity.h  Solidity.cpp  basicScoreMaker.cpp
src/Modifieurs/: ConvexHull.cpp  ConvexHull.h  Morphology.cpp  Morphology.h  Remplissage.cpp  Remplissage.h  Traitement_AntiBruit.cpp  Traitement_AntiBruit.h  Traitement_AntiInversion.cpp  Traitement_AntiInversion.h
src/Tests/: deer-6-rotate-1.04.pgm
src/Tools/: DSS_Bresenham.cpp  DSS_Bresenham.h  LireImgPgm.cpp  Rotate.cpp
(+112 files in other folders)
